--- a/index.html
+++ b/index.html
@@ -15,6 +15,12 @@
     </div>
     <div class="container">
         <div class="maestro">
+            <div class="circleContainer flex spacearound aligncenter">
+                <div class="circulo"></div>
+                <div class="circulito rojo"></div>
+                <div class="circulito verde"></div>
+                <div class="circulito amarillo"></div>
+            </div>
             <ul id="lista"></ul>
             <button id="showMoreBtn">Cargar más</button>
         </div>
