--- a/index.html
+++ b/index.html
@@ -13,6 +13,16 @@
     <div class=logo>
         <img src="pokedex.png" alt="Pokedex">
     </div>
+    <div id="loginContainer" class="loginContainer flex">
+        <div id="login">
+            <form id="formulario" action="" class="form">
+                <h2 style= margin-top:10px >Inicie sesión</h2>
+                <input id="user" type="text" placeholder="Usuario">
+                <input id="password" type="password" placeholder="Contraseña">
+                <button type="submit" id="BtnLogin">Enviar</button>
+            </form>
+        </div>
+    </div>
     <div class="container">
         <div class="maestro">
             <div class="circleContainer flex spacearound aligncenter">
